--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -77,3 +77,23 @@ img{
 #botones-navegacion{
     visibility: hidden;
 }
+
+/* Styles for series.html */
+#hero-series{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 88vh;
+    color: white;
+    background-image: linear-gradient(
+        180deg,
+        rgba(0,0,0,0.6),
+        rgba(0,0,0,1)
+    ),
+    url("../img/vikings2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    
+}
